fix the problem that h1 h2 h3 switch color between  light and dark mode

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,21 +4,6 @@
   h1,
   h2,
   h3 {
-<<<<<<< HEAD
-    --uno: mt-[0.5em] mb-[0.5em] leading-[1.3] text-left;
-  }
-
-  h1 {
-    --uno: text-[2em] light: text-gray-900 dark: text-gray-200;
-  }
-
-  h2 {
-    --uno: text-[1.6em] light: text-gray-900 dark: text-gray-200;
-  }
-
-  h3 {
-    --uno: text-[1.3em] light: text-gray-900 dark: text-gray-300;
-=======
     --uno: mt-[0.5em] mb-[0.5em] leading-[1.3] text-left light:text-gray-900
       dark:text-gray-200;
   }
@@ -33,17 +18,12 @@
 
   h3 {
     --uno: text-[1.3em];
->>>>>>> 786f366 (feat: add QuoteBlock component and integrate into slides for improved text presentation)
   }
 
   h4,
   h5,
   h6 {
-<<<<<<< HEAD
-    --uno: text-[1.2em] light: text-gray-900 dark: text-gray-300;
-=======
     --uno: text-[1.2em] light:text-gray-900 dark:text-gray-300;
->>>>>>> 786f366 (feat: add QuoteBlock component and integrate into slides for improved text presentation)
   }
 
   p {
@@ -65,21 +45,12 @@
 
   img {
     --uno: max-w-[85%] h-auto block my-[1.2em] mx-auto border
-<<<<<<< HEAD
-      light: border-gray-200 dark: border-gray-600 rounded-[4px];
-  }
-
-  blockquote {
-    --uno: light: border-gray-300 dark: border-gray-600 light: text-gray-600
-      dark: text-gray-400 italic;
-=======
       light:border-gray-200 dark:border-gray-600 rounded-[4px];
   }
 
   blockquote {
     --uno: light:border-gray-300 dark:border-gray-600 light:text-gray-600
       dark:text-gray-400 italic;
->>>>>>> 786f366 (feat: add QuoteBlock component and integrate into slides for improved text presentation)
   }
 
   a {
